Fixed some spelling mistakes and changed list to use fixed width instead of flex

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ turned into a fun project with alot more features and some other changes. -->
                 </span>
             </div>
             <ul id="invitedList"></ul>
-            <footer><span> Made by (Wybe van den Bosch)</span></footer>
+            <footer><span> Made by Wybe van den Bosch</span></footer>
         </div>
     </div>
     <script type="text/javascript" src="app.js"></script>
